--- a/assignment-2-task-1/contact.html
+++ b/assignment-2-task-1/contact.html
@@ -31,11 +31,29 @@
                     <label for="name">Name</label>
                     <input type="text" name="name" placeholder="Name">
 
-                    <label for="email">Email Address</label>
-                    <input type="text" name="email" placeholder="Email Address">
+                    <label for="contact">Best Way to Reach You</label>
+                    <select id="contact-method">
+                        <option value="">Please Select</option>
+                        <option value="phone">Work Phone</option>
+                        <option value="phone">Cell Phone</option>
+                        <option value="email">Email</option>
+                        <option value="instant-messenger">Instant Messenger</option>
+                    </select>
 
-                    <label for="phone">Phone Number</label>
-                    <input type="text" name="phone" placeholder="Phone Number">
+                    <div class="contact-method email">
+                        <label for="email">Email Address <span id="invalid-email"> * Invalid Email. FIX NOW or PERISH! </span></label>
+                        <input type="text" name="email" placeholder="Email Address">
+                    </div>
+
+                    <div class="contact-method phone">
+                        <label for="phone">Phone Number <span id="invalid-phone"> * Ha yea. I've hit on women before, I know a fake number when I see one</span></label>
+                        <input type="text" name="phone" placeholder="Phone Number">
+                    </div>
+
+                    <div class="contact-method instant-messenger">
+                        <label for="instant-messenger">Instant Messenger</label>
+                        <input type="text" name="instant-messenger" placeholder="Instant Messenger">
+                    </div>
 
                     <label for="contact">Best Time to Contact</label>
                     <select>
@@ -56,6 +74,7 @@
                 
             </section>
         </section>
+        <script src="js/jquery.js"></script>
         <script src="js/contact.js"></script>
     </body>
 </html>
