--- a/assignment-4/spa.html
+++ b/assignment-4/spa.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <script src="js/jquery.js" type="text/javascript"></script>
     <script src="js/jquery-mobile.js"></script>
-    <!--<script src="js/contact.js"></script>-->
+    <script src="js/contact.js"></script>
     <meta name="HandheldFriendly" content="true" />
     <meta name="MobileOptimized" content="320" />
     <meta name="Viewport" content="width=device-width, initial-scale=1.0" />
@@ -34,7 +34,7 @@
         </div>
         <div class="ui-content" role="main">
             <div class="search-form">
-                <form class="bordered-element" action="" method="POST">
+                <form class="bordered-element" action="https://apps.kelley.iu.edu/systemsapi/echo/echo" method="POST">
                     <label  for="searchPhrase">Search Phrase:</label>
                     <input type="text" name="searchPhrase" id="searchPhrase" />
                     <br/>
@@ -95,7 +95,7 @@
             the best and latest information technology education to our program members. No one
             spends more money on training than, no one.
             </p>
-            <img src="img/itlp-kelley.png" class="itlp-kelly-image"/>
+            <img src="img/itlp-kelley.png" class="itlp-kelley-image"/>
             <h3>What kind of projects will I do?</h3>
             <p>A better question will be what won't you do! We have everything from:
             <ul>
@@ -180,13 +180,14 @@
                 </div>
 
                 <div>
-                    <input type="checkbox" name="located-in-us"> Located in U.S?
+                    <label>Located in US?</label>
+                    <input type="checkbox" name="located-in-us">
                 </div>
 
                 <label for="comments">Comments and Questions</label>
                 <textarea name="comments" placeholder="Comments and Questions"></textarea>
 
-                <button type="submit">Submit</button>
+                <button id="submit-contact-form">Submit</button>
             </form>
         </div>
         <div data-role="footer">
